--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
 		"@commitlint/cli": "^20.4.1",
 		"@commitlint/config-conventional": "^20.4.1",
 		"@eslint/js": "^9.39.1",
-		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/commit-analyzer": "^13.0.1",
+		"@semantic-release/exec": "^7.1.0",
 		"@semantic-release/github": "^12.0.6",
-		"@semantic-release/npm": "^13.1.4",
 		"@semantic-release/release-notes-generator": "^14.1.0",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.7",
