--- a/releaserc.json
+++ b/releaserc.json
@@ -4,15 +4,26 @@
 			"name": "master"
 		},
 		{
-			"name": "develop",
+			"name": "staging",
 			"prerelease": "alpha"
 		}
 	],
 	"plugins": [
 		"@semantic-release/commit-analyzer",
 		"@semantic-release/release-notes-generator",
-		"@semantic-release/changelog",
 		"@semantic-release/git",
-		"@semantic-release/github"
+		[
+			"@semantic-release/exec",
+			{
+				"prepareCmd": "mv dist.zip dist-v${nextRelease.version}.zip"
+			}
+		],
+		[
+			"@semantic-release/github",
+			{
+				"assets": "dist-v${nextRelease.version}.zip",
+				"label": "Web Build"
+			}
+		]
 	]
 }
